fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h4 {
 
 #deacronym {
     font-size: 25px;
-    margin: 0px;
+    margin: 10px 0px;
 }
 
 #description {
@@ -68,9 +68,9 @@ a:hover {
 }
 
 main {
-    max-width: 900px;
     padding: 20px;
     background-color: #1d2021;
+    width: clamp(300px, 900px, calc(100vw - 20px));
 }
 
 img {
@@ -166,4 +166,26 @@ footer {
 .feature {
     width: 250px;
     margin: 0px 10px;
+}
+
+@media screen and (max-width: 480px) {
+    .header {
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .header-text {
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .logo {
+        margin: 0px;
+    }
+
+    table, th, td {
+        font-size: 16px;
+    }
 }
